fix .sized padding vw causing wrap on wide-screen

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -25,12 +25,12 @@ html{
 }
 .sized-large{
     max-width: 1170px;
-    padding: 0 1vw;
+    padding: 0 10px;
     margin: 0 auto;
 }
 .sized-thin{
     max-width: 1170px;
-    padding: 0 5vw;
+    padding: 100px ;
     margin: 0 auto;
 }
 .min-w-200{
